# Final_Eye

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  queen_browser_smoke.py  queen_forge_watch.py  requirements.txt  start.sh  zocr.py  zocr_additives.py  zocr_ai.py  zocr_capture.py  zocr_contract.py  zocr_copilot.py  zocr_entity_eyeball.py  zocr_eye.py  zocr_eye_motion.py  zocr_eye_operations.py  zocr_eye_stoard.py  zocr_field.py  zocr_field_compile.py  zocr_field_compiler.py  zocr_grkmf.py  zocr_grok16.py  zocr_heaven_hell.py  zocr_hud.py  zocr_kill.py  zocr_neural.py  zocr_offense.py  zocr_pattern.py  zocr_preserve.py  zocr_product.py  zocr_robotics.py  zocr_security.py  zocr_session.py  zocr_sovereign_time.py  zocr_status.py  (+9 more)
GrokMediaFormat/: README.md  pyproject.toml
GrokMediaFormat/data/: grkmf-v1.json
GrokMediaFormat/grkmf/: __init__.py  __main__.py  cli.py  codec_gvc1.py  compare.py  container.py  envelope.py  movie.py  spec.py  stream.py  tune.py
GrokMediaFormat/tests/: test_grkmf.py
data/: code-seal.json  copilot-foundations.json  display-additives.json  entity-eyeball-state.json  entity-eyeball.json  eye-motion-doctrine.json  eye-operations-doctrine.json  eye-operations-state.json  eye-rig-state.json  eye-rig.json  eye-state.json  eye-stoard-doctrine.json  eye-teach-doctrine.json  eyeball-sovereign-time.json  field-compiler.json  field-manual-vision.json  final-eyeball-state.json  final-eyeball.json  heaven-hell-state.json  heaven-hell-truth.json  hud-modules.json  kill-state.json  neural-protected.json  (+13 more)
(+57 files in other folders)
